# dns-aid-core

./: CHANGELOG.md  CITATION.cff  README.md  SECURITY.md  pyproject.toml
.github/: draft-tracking.json
.github/workflows/: _draft-watch-reusable.yml  ci.yml  codeql.yml  dco.yml  draft-watch.yml  release.yml  scorecard.yml  security.yml
docs/: api-reference.md  architecture.md  ard-catalog.md  demo-guide.md  getting-started.md  integrations.md  mcp-directory-listing.md  positioning.md  privacy-considerations.md
docs/integrations/: opentelemetry.md
docs/rfc/: iana-considerations.md  privacy-considerations.md  security-considerations.md  wire-format-01.abnf
examples/integration_otel_collector/: README.md
scripts/: check_draft_status.py  preflight.sh
src/dns_aid/: __init__.py
src/dns_aid/backends/: base.py  ddns.py  mock.py
src/dns_aid/backends/infoblox/: bloxone.py  nios.py
src/dns_aid/cli/: doctor.py  init.py  main.py
src/dns_aid/core/: a2a_card.py  agent_metadata.py  bap.py  cap_fetcher.py  catalog_pointer.py  dcv.py  discoverer.py  filters.py  fqdn.py  http_index.py  indexer.py  jwks.py  lister.py  models.py  publisher.py  validator.py
src/dns_aid/mcp/: server.py
src/dns_aid/sdk/: client.py
src/dns_aid/sdk/auth/: oauth2.py
src/dns_aid/sdk/policy/: evaluator.py
src/dns_aid/sdk/protocols/: _mcp_telemetry.py
src/dns_aid/sdk/telemetry/: otel.py
src/dns_aid/utils/: url_safety.py  validation.py
tests/integration/: conftest.py  test_ddns.py  test_mock_flows.py  test_policy_e2e.py
tests/parity/: conftest.py
tests/testbed/: smoke_test.sh
tests/testbed/bind-orga/zones/: orga.test.zone
tests/testbed/bind-orgb/zones/: orgb.test.zone
tests/unit/: test_a2a_card.py  test_catalog_pointer.py  test_cli.py  test_cloudflare_backend.py  test_ddns_backend.py  test_discoverer.py  test_dnssec_dane_coherence.py  test_draft_watcher.py  test_fqdn.py  test_http_index.py  test_indexer.py  test_infoblox_backend.py  test_infoblox_nios_backend.py  test_jws.py  test_lister.py  test_mcp_server.py  test_mock_backend.py  test_models.py  test_publisher.py  test_route53_backend.py  test_url_safety.py  test_url_safety_async.py  test_validation.py  test_validator.py
tests/unit/core/: test_discoverer_filters.py
tests/unit/sdk/: test_client_search.py  test_optional_mcp_import.py  test_otel.py  test_search_adapter.py
tests/unit/sdk/auth/: test_client_auth.py
tests/unit/sdk/policy/: test_bindaid_writer.py  test_evaluator.py
