[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dns-aid"
version = "0.24.1"
description = "DNS-based Agent Identification and Discovery - Reference Implementation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "DNS-AID Contributors" }
]
keywords = [
    "dns",
    "agent",
    "discovery",
    "mcp",
    "a2a",
    "ai",
    "svcb",
    "dnssec"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "dnspython>=2.6.0",
    "pydantic>=2.5.0",
    "httpx>=0.27.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
cli = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]
mcp = [
    "mcp>=1.0.0",
    "uvicorn>=0.30.0",
    # Direct floors on transitive deps pulled by `mcp` to close Dependabot alerts
    # (mcp's upstream constraints are looser than the patched versions need).
    "pyjwt>=2.13.0",            # PYSEC-2026-175/177/178/179 (4 vulns); supersedes CVE-2026-32597 (unknown 'crit' header)
    "python-multipart>=0.0.27", # CVE-2026-42561 / GHSA-pp6c-gr5w-3c5g (high) — DoS via unbounded multipart headers; supersedes CVE-2026-40347
]
route53 = [
    "boto3>=1.34.0",
]
cloud-dns = [
    "google-auth>=2.30.0",
    "requests>=2.33.0",
]
infoblox = [
    # Uses httpx from core deps
]
cloudflare = [
    # Uses httpx from core deps
]
ns1 = [
    # Uses httpx from core deps
]
nios = [
    # Uses httpx from core deps
]
ddns = [
    # Uses dnspython from core deps
]
jws = [
    # JWS signature support (alternative to DNSSEC)
    "cryptography>=46.0.7",
]
sdk = [
    # SDK with protocol handlers, ranking, signals
    # Core SDK uses httpx (already in deps)
]
otel = [
    # OpenTelemetry integration for SDK telemetry (spec 005).
    # Upper bound pinned at <2.0.0 — major version bumps are coordinated
    # via a deliberate compat audit (FR-027 / hardening H6).
    "opentelemetry-api>=1.20.0,<2.0.0",
    "opentelemetry-sdk>=1.20.0,<2.0.0",
    # OTLP gRPC exporter — required for otel_export_format="otlp"; without
    # this package, OTLP export silently falls back to console (a footgun).
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0,<2.0.0",
]
cel = [
    # CEL (Common Expression Language) custom policy rules
    # Rust backend (~2µs/eval); falls back to cel-python (~200µs/eval) if unavailable
    "common-expression-language>=0.5.0",
    "cel-python>=0.5.0",
]
pqc = [
    # Post-quantum cryptography (ML-DSA-65 for HTTP Message Signatures)
    "pqcrypto>=0.4.0",
]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "boto3-stubs[route53]>=1.34.0",
    "httpx>=0.27.0",
    "cryptography>=46.0.7",
    "cyclonedx-bom>=4.0.0",
    "pqcrypto>=0.4.0",
    "common-expression-language>=0.5.0",
    "cel-python>=0.5.0",
    # Direct floors on transitive deps to close Dependabot alerts:
    "lxml>=6.1.0",       # CVE-2026-41066 (high) — XXE in iterparse, via cyclonedx-bom
    "pygments>=2.20.0",  # CVE-2026-4539 (low) — ReDoS in GUID regex, via rich/pytest/cel
    "urllib3>=2.7.0",    # CVE-2026-44431 + CVE-2026-44432 (high) — header leak + decompression bomb
]
all = [
    # CLI
    "typer>=0.12.0",
    "rich>=13.0.0",
    # MCP
    "mcp>=1.0.0",
    "uvicorn>=0.30.0",
    # Transitive floors via mcp (Dependabot)
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.27",
    # Backends: Route53, Cloudflare, NS1, Cloud DNS, Infoblox BloxOne, NIOS, DDNS
    "boto3>=1.34.0",
    "google-auth>=2.30.0",
    # JWS
    "cryptography>=46.0.7",
    # OpenTelemetry (spec 005 — upper bound pinned per FR-027)
    "opentelemetry-api>=1.20.0,<2.0.0",
    "opentelemetry-sdk>=1.20.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0,<2.0.0",
    # Dev
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "boto3-stubs[route53]>=1.34.0",
    # Transitive floors (Dependabot)
    "lxml>=6.1.0",
    "pygments>=2.20.0",
    "urllib3>=2.7.0",
]

[project.scripts]
dns-aid = "dns_aid.cli.main:app"
dns-aid-mcp = "dns_aid.mcp.server:main"

[project.urls]
Homepage = "https://github.com/infobloxopen/dns-aid-core"
Documentation = "https://github.com/infobloxopen/dns-aid-core#readme"
Repository = "https://github.com/infobloxopen/dns-aid-core"
Changelog = "https://github.com/infobloxopen/dns-aid-core/blob/main/CHANGELOG.md"
Issues = "https://github.com/infobloxopen/dns-aid-core/issues"
Security = "https://github.com/infobloxopen/dns-aid-core/security/policy"

[tool.hatch.build.targets.wheel]
packages = ["src/dns_aid"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"
markers = [
    "live: tests requiring real infrastructure (Route53, Infoblox, DDNS, etc.)",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
no_strict_optional = true
allow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "SIM108", "SIM102"]  # SIM108/SIM102: style preferences (guard clause + check pattern)

[tool.ruff.lint.per-file-ignores]
# Tests often use nested with statements for mocking and uppercase mock variable names
"tests/**/*.py" = ["SIM117", "N806"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv", "build", "dist"]
skips = ["B101", "B110"]

[tool.coverage.run]
source = ["src/dns_aid"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
